--- a/.github/workflows/update-data.yml
+++ b/.github/workflows/update-data.yml
@@ -24,4 +24,5 @@ jobs:
           delete-branch: true
           base: main
           title: Update data
+          body: "Caused by ${{ github.sha }}"
 
