--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "@canterbury-air-patrol/marine-sweep-width-data",
   "version": "0.1.0",
   "description": "Marine Search and Rescue Sweep Width Data",
-  "main": "marine-sweep-width-data.js",
+  "main": "dist/marine-sweep-width-data.js",
+  "package": "dist/marine-sweep-width-data.mjs",
+  "types": "dist/marine-sweep-width-data.d.ts",
+  "files": [
+    "dist/"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,5 +26,9 @@
   "bugs": {
     "url": "https://github.com/canterbury-air-patrol/marine-sweep-width-data/issues"
   },
-  "homepage": "https://github.com/canterbury-air-patrol/marine-sweep-width-data#readme"
+  "homepage": "https://github.com/canterbury-air-patrol/marine-sweep-width-data#readme",
+  "devDependencies": {
+    "tsup": "^8.3.5",
+    "typescript": "^5.7.2"
+  }
 }
