--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@canterbury-air-patrol/marine-sweep-width-data",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Marine Search and Rescue Sweep Width Data",
   "main": "dist/marine-sweep-width-data.js",
   "package": "dist/marine-sweep-width-data.mjs",
@@ -9,6 +9,7 @@
     "dist/"
   ],
   "scripts": {
+    "build": "tsup",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
